<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.RecipeActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <FrameLayout
                android:id="@+id/ingredients_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"/>
            <TextView
                android:id="@+id/tv_instructions_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/text_half_margin"
                android:paddingRight="@dimen/text_half_margin"
                android:text="@string/instructions_title"
                android:textSize="@dimen/default_text_size_header"
                app:layout_constraintTop_toBottomOf="@id/ingredients_container"
                app:layout_constraintLeft_toLeftOf="parent"/>
            <FrameLayout
                android:id="@+id/instructions_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_instructions_title"
                app:layout_constraintLeft_toLeftOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>
