...
            android:textSize="@dimen/default_text_size_body"
            android:onClick="onSendToShoppingListClicked"
            app:layout_constraintTop_toBottomOf="@id/tv_ingredients_title"
            app:layout_constraintLeft_toLeftOf="parent"
            />
        <TextView
            android:id="@+id/tv_ingredients"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/text_margin"
            android:layout_marginRight="@dimen/text_margin"
            android:paddingLeft="@dimen/text_margin"
            android:paddingRight="@dimen/text_margin"
...
